# quarto-gradio

./: LICENSE  README.md  example.qmd  pyproject.toml
.github/workflows/: publish.yml
_extensions/gradio/: _extension.yml  gradio-debug.lua  gradio-html.lua  gradio-meta.lua  gradio.lua  table-utils.lua
web/: .gitignore  _metadata.yml  _quarto.yml  about.qmd  analytics.html  index.qmd  js.html  styles.css
web/docs/get-started/: index.qmd
web/docs/guide/: index.qmd
web/docs/playground/: index.qmd
web/guide/: _metadata.yml
web/guide/customize-python-modules/: index.qmd  install-module-via-micropip.qmd  install-module-via-requirements.qmd
web/guide/customize-styles/: index.qmd
web/guide/define-multiple-apps/: index.qmd
web/guide/enable-coding-playground/: attributes-block.qmd  attributes-doc.qmd  coding-challenge.qmd  index.qmd
web/guide/examples/: _metadata.yml  hello-world.qmd
web/guide/get-started/: hello-world.qmd  index.qmd
web/guide/use-with-jupyter/: index.qmd
web/guide/use-with-revealjs/: index.qmd  reveal-gradio-lite-minimal.qmd  reveal-gradio-lite.qmd
web/playground/: _metadata.yml
web/playground/chatbots/: chatbot-with-artifacts.qmd  chatbot-with-tools.qmd  chatbot.qmd  streaming-chatbot.qmd
web/playground/design/: layouts.qmd  tabbed-interface.qmd
web/playground/media/: generate-tone.qmd  sepia-filter.qmd  video-identity.qmd
web/playground/tabular/: filter-records.qmd  kinematics.qmd  transpose-matrix.qmd
web/playground/text/: diff-texts.qmd  (+1 more)
web/reference/: _metadata.yml  index.qmd
web/tools/: src-include.lua
(+6 files in other folders)
